added the summary and hiking sections! will need to link to guides later (alltrails.com maybe)

--- a/css/header.css
+++ b/css/header.css
@@ -23,7 +23,7 @@
 }
 
 .navbar__link:hover {
-    color: var(--main-color);
+    color: var(--primary-color);
 }
 
 @media screen and (max-width: 768px) {
