--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,8 @@
 /* overall colors */
 :root {
-    --main-color: #f9032f;
-    --secondary-color: #000;
-    --third-color: #fff;
+    --primary-color: #F9032F;
+    --secondary-color: #000000;
+    --third-color: #FFFFFF;
 }
 
 * {
@@ -10,4 +10,182 @@
     margin: 0;
     padding: 0;
     font-family: 'Poppins', sans-serif;
+}
+
+/* Hero Section for Home Page */
+.hero {
+    background: linear-gradient(to right, rgba(0,0,0,0.4), rgba(0,0,0,0.1)),
+    url('/images/scenic-waterfall-fall.jpg'); /* smaller image size, quicker load time */
+    height: 100vh;
+    background-position: center;
+    background-size: cover;
+    padding: 8px calc((100vw - 1200px) / 2);
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.hero__content {
+    color: var(--third-color);
+    padding: 48px 16px;
+    line-height: 1;
+}
+
+.hero__content h1 {
+    font-size: clamp(48px, 8vw, 112px); /* make font size resize depending on viewports/screenscreen (lowest,viewport width,highest) */
+    text-transform: uppercase;
+    margin-bottom: 8px;
+}
+
+.hero__content p {
+    font-size: clamp(8px, 8vw, 40px); /* make font size resize depending on viewports/screenscreen (lowest,viewport width,highest) */
+    margin-bottom: 48px;
+}
+
+.button {
+    padding: 16px 48px;
+    border: none;
+    background-color: var(--primary-color);
+    color: var(--third-color);
+    font-size: 16px;
+    cursor: pointer;
+    outline: none;
+    transition: 0.3s ease;
+    text-decoration: none;
+    border-radius: 4px;
+}
+
+.button:hover {
+    background-color: var(--secondary-color);
+}
+
+/* Summary Section */
+.summary {
+    padding: 8px calc((100vw - 1200px) / 2);
+}
+
+.summary__container {
+    display: grid;
+    grid-template-columns: 1fr 1fr; /* create two equal grid sections */
+    padding: 16px;
+}
+
+.summary__img {
+    width: 100%;
+    height: 100%;
+}
+
+.topline {
+    color: var(--primary-color);
+    text-transform: uppercase;
+    font-weight: bold;
+    margin-bottom: 8px;
+}
+
+.summary__heading {
+    margin-bottom: 16px;
+    font-size: clamp(32px, 6vw, 48px);
+}
+
+.summary__features {
+    list-style: none;
+}
+
+.summary__feature {
+    margin-bottom: 24px;
+    font-size: clamp(16px, 5vs, 24px);
+}
+
+/* font awesome icon changes */
+.fa-campground {
+    margin-right: 8px;
+    color: var(--primary-color);
+}
+
+.fa-mountain {
+    margin-right: 8px;
+    color: var(--primary-color);
+}
+
+.fa-water {
+    margin-right: 8px;
+    color: var(--primary-color); 
+}
+
+/* Responsive Mobile Styles */
+@media screen and (max-width: 768px) {
+    .summary__container {
+        grid-template-columns: 1fr;
+    }
+}
+
+/* Hiking Section */
+.hiking {
+    background: var(--secondary-color);
+    color: var(--third-color);
+    padding: 6rem calc((100vw - 1100px) / 2 );
+    text-align: center;
+}
+
+.hiking h1 {
+    margin-bottom: 16px;
+    font-size: clamp(32px, 5vw, 48px);
+    padding: 0 16px;
+}
+
+.hiking__desc {
+    margin-bottom: 48px;
+    font-size: clamp(16px, 3vw, 24px);
+    padding: 16px;
+}
+
+.hiking__wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    padding: 16px;
+}
+
+.hiking__card {
+    padding: 32px;
+    min-height: 450px;
+    width: 325px;
+    background: var(--third-color);
+    color: var(--secondary-color);
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.hiking__summary {
+    min-height: 150px; /* keeping content on the same height */
+}
+
+.hiking__card p {
+    margin-bottom: 16px;
+}
+
+.card-icon {
+    font-size: 48px;
+    margin-bottom: 32px;
+    color: var(--primary-color);
+}
+
+.hiking__card h3 {
+    font-size: clamp(16px, 5vw, 32px);
+    margin-bottom: 32px;
+}
+
+/* Mobile View Responsive */
+@media screen and (max-width: 1100px) {
+    .hiking__wrapper {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .hiking__card {
+        width: 90%;
+        margin-bottom: 32px;
+    }
 }
