--- a/css/styles.css
+++ b/css/styles.css
@@ -82,7 +82,7 @@
     margin-bottom: 8px;
 }
 
-.summary__heading {
+.summary__headline {
     margin-bottom: 16px;
     font-size: clamp(32px, 6vw, 48px);
 }
