created the gallery images of the outdoors on the index.html page

--- a/css/styles.css
+++ b/css/styles.css
@@ -78,6 +78,7 @@
 .topline {
     color: var(--primary-color);
     text-transform: uppercase;
+    font-size: 32px;
     font-weight: bold;
     margin-bottom: 8px;
 }
@@ -189,3 +190,118 @@
         margin-bottom: 32px;
     }
 }
+
+/* Photo Gallery Section */
+.gallery {
+    padding: 8rem calc((100vw - 1100px) / 2);
+}
+
+.gallery__wrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: repeat(auto, 350px);
+}
+
+.gallery__card {
+    margin: 16px;
+    border-radius: 10px;
+    position: relative;
+}
+
+.gallery__text {
+    padding: 16px;
+}
+
+.gallery__text h1 {
+    margin-bottom: 16px;
+    font-size: 48px;
+}
+
+.gallery__desc {
+    font-size: clamp(16px, 3vw, 1.3rem);
+    line-height: 1.4;
+}
+
+.gallery__card p {
+    position: absolute;
+    bottom: 30px;
+    color: var(--third-color);
+    left: 25px;
+    font-size: 48px;
+}
+
+.gallery__img {
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+}
+
+.gallery__text:nth-child(1) { /* moving of the first text box to the top of the right column */
+    grid-row: 1/3; 
+    grid-column: 2/3;
+}
+
+.gallery__text:nth-child(2) { /* moving of the second text box to the bottom of the left column */
+    grid-row: 5/6;
+    grid-column: 1/2;
+}
+
+.gallery__card:nth-child(3) { /* moving to the top left column */
+    grid-row: 1/3;
+    grid-column: 1/2;
+}
+
+.gallery__card:nth-child(4) {
+    grid-row: 2/4;
+    grid-column: 2/3;
+}
+
+.gallery__card:nth-child(5) {
+    grid-row: 3/5;
+    grid-column: 1/2;
+}
+
+.gallery__card:nth-child(6) {
+    grid-row: 4/6;
+    grid-column: 2/3;
+}
+
+/* Mobile View Responsive */
+@media screen and (max-width: 768px) {
+    .gallery__wrapper {
+        grid-template-columns: 1fr;
+        grid-template-rows: auto;
+    }
+
+    .gallery__text:nth-child(1) {
+        grid-row: 1/2; 
+        grid-column: 1/2;
+    }
+    
+    .gallery__text:nth-child(2) {
+        grid-row: 6/7;
+        grid-column: 1/2;
+    }
+    
+    .gallery__card:nth-child(3) {
+        grid-row: 3/4;
+        grid-column: 1/2;
+    }
+    
+    .gallery__card:nth-child(4) {
+        grid-row: 4/5;
+        grid-column: 1/2;
+    }
+    
+    .gallery__card:nth-child(5) {
+        grid-row: 5/6;
+        grid-column: 1/2;
+    }
+    
+    .gallery__card:nth-child(6) {
+        grid-row: 2/3;
+        grid-column: 1/2;
+    }
+}
+
+/* Form Section */
