--- a/css/styles.css
+++ b/css/styles.css
@@ -305,3 +305,153 @@
 }
 
 /* Form Section */
+.email {
+    background: linear-gradient(
+        180deg, 
+        rgba(0,0,0,0.6) 0%, 
+        rgba(0,0,0,0.6) 35%,
+        rgba(0,0,0,0.1) 100%
+        ),
+    url('/images/oregon-coast-overview.jpg') no-repeat center;
+    background-size: cover;
+    height: 450px;
+    width: 100%;
+    padding: 5rem calc((100vw - 1300px) /2);
+    color: var(--third-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.email__content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.email__content h1 {
+    text-align: center;
+    margin-bottom: 16px;
+    font-size: clamp(16px, 5vw, 48px);
+    padding: 0 16px;
+}
+
+.email__content p {
+    text-align: center;
+    font-size: clamp(16px, 2.5vw, 24px);
+    padding: 0 16px;
+    margin-bottom: 32px;
+}
+
+form {
+    z-index: 10;
+}
+
+.form__wrap input {
+    padding: 16px 24px;
+    outline: none;
+    width: 350px;
+    height: 50px;
+    border: none;
+    margin-right: 16px;
+    border-radius: 4px;
+}
+
+@media screen and (max-width: 768px) {
+    .form__wrap {
+        display: flex;
+        flex-direction: column;
+        padding: 0 16px;
+    }
+
+    .form__wrap input {
+        margin-bottom: 16px;
+        width: 100%;
+        margin-right: 0;
+    }
+
+    button {
+        width: 100%;
+        min-width: 350px;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    button {
+        width: 100%;
+        min-width: 250px;
+    }
+}
+
+/* Footer Section */
+.footer {
+    padding: 5rem calc((100vw - 1100px) /2);
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    color: var(--third-color);
+    background: var(--secondary-color);
+}
+
+.footer__desc {
+    padding: 0 32px;
+}
+
+.footer__desc h1 {
+    margin-bottom: 32px;
+    color: var(--primary-color);
+    font-size: 24px
+}
+
+.footer__desc p {
+    margin-bottom: 16px;
+}
+
+#phone {
+    font-weight: bold;
+    font-size: 1.2rem;
+}
+
+.footer__wrapper {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.footer__links {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 16px 32px;
+}
+
+.footer__title {
+    font-size: 14px;
+    margin-bottom: 16px;
+}
+
+.footer__link {
+    text-decoration: none;
+    color: var(--third-color);
+    font-size: 14px;
+    margin-bottom: 8px;
+    transition: 0.3s ease-in-out;
+}
+
+.footer__link:hover {
+    color: var(--primary-color);
+}
+
+@media screen and (max-width: 820px) {
+    .footer__wrapper {
+        grid-template-columns: 1fr;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .footer__desc {
+       padding: 16px;
+    }
+
+    .footer__links {
+        padding: 16px;
+    }
+}
