--- a/css/styles.css
+++ b/css/styles.css
@@ -70,6 +70,14 @@
     padding: 16px;
 }
 
+.summary__text {
+    margin-right:16px;
+}
+
+.summary__image2 { /* when image is on the left of the page */
+    margin-right: 16px;
+}
+
 .summary__img {
     width: 100%;
     height: 100%;
