updated some of the text on the oregon.html page and also updated items in the footer a bit (name + email)

--- a/css/styles.css
+++ b/css/styles.css
@@ -121,6 +121,21 @@
     color: var(--primary-color); 
 }
 
+.fa-camera {
+    margin-right: 13px;
+    color: var(--primary-color); 
+}
+
+.fa-ice-cream {
+    margin-right: 13px;
+    color: var(--primary-color); 
+}
+
+.fa-snowboard {
+    margin-right: 13px;
+    color: var(--primary-color); 
+}
+
 /* Responsive Mobile Styles */
 @media screen and (max-width: 768px) {
     .summary__container {
