--- a/css/footer.css
+++ b/css/footer.css
@@ -21,9 +21,9 @@
     margin-bottom: 16px;
 }
 
-#phone {
+#email {
     font-weight: bold;
-    font-size: 1.2rem;
+    font-size: 16px;
 }
 
 .footer__wrapper {
