adding of the gallery hero page

--- a/css/oregon.css
+++ b/css/oregon.css
@@ -1,4 +1,4 @@
-/* Hero Section for Home Page */
+/* Hero Section for Oregon Page */
 .hero-oregon {
     background: linear-gradient(to right, rgba(0,0,0,0.4), rgba(0,0,0,0.1)),
     url('/images/night-sky.jpg'); /* smaller image size, quicker load time */
