--- a/css/styles.css
+++ b/css/styles.css
@@ -131,7 +131,7 @@
     color: var(--primary-color); 
 }
 
-.fa-snowboard {
+.fa-snowboarding {
     margin-right: 13px;
     color: var(--primary-color); 
 }
